# plato

./: .gitignore  README.md  index.html  index.ts  package.json  playwright.config.ts  tsconfig.json  webpack.config.js
script/: index.ts
server/: Cargo.toml
server/src/: main.rs
tests/: index.spec.ts
